--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ tmp/
 .sass-cache/
 .DS_Store
 config/yettings.yml
+
+config/settings.yml
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
